fixed issue with white spaces showing at the bottom of the contact form

--- a/frontend/src/ContactForm/ContactForm.css
+++ b/frontend/src/ContactForm/ContactForm.css
@@ -8,18 +8,19 @@
 }
 
 .contact-form-container{
-  padding: 50px;
-  border-radius: 20px;
+  padding: 30px;
+  border-radius: 10px;
   background-color: #fff; 
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); 
   height: 100%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: justify;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 5vh;
+  margin-bottom: 20vh;
 }
 
 .mb-3 {
